--- a/font-end/css/base/input.css
+++ b/font-end/css/base/input.css
@@ -31,3 +31,21 @@
     position: absolute;
     margin-left: 8px;
 }
+.input.input--disable{
+    background-color: #f0f2f4;
+}
+
+.input.input--disable:hover{
+    background-color: #f0f2f4;
+}
+
+.input-textarea{
+    outline: none;
+    min-height: 60px;
+    max-height: 60px;
+    font-size: 13px;
+    border-radius: 4px;
+    border: 1px solid #d3d7de;
+    color: #1f2229;
+    vertical-align: middle;
+}
